# direnv-config

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish-sdks.yml
demo/: README.md
demo/expected-state/: design.yaml  projects.yaml  root.yaml  staging.yaml  terraform.yaml
demo/k8/: .envrc
demo/k8/docker/telemetry/run-claude/: .envrc
demo/k8/terraform/: .envrc
demo/k8/terraform/domains/: .envrc
demo/root/: .envrc
demo/root/projects/: .envrc
demo/root/projects/apps/: .envrc
demo/root/projects/design/: .envrc
demo/root/projects/staging/: .envrc
demo/root/projects/terraform/: .envrc
demo/root/scripts/: deploy.sh
docs/: PROJ-ARCH.md  PROJ-ARCH.summary.md  PROJ-LAYOUT.md  PROJ-LAYOUT.summary.md
docs/arch/: flatten-rules.md  layer-resolution.md  parent-chain.md
docs/layout/: sdk.md
lib/: direnv-stdlib.sh
sdk/: Makefile  README.md
sdk/contract-tests/: expectations.yaml
sdk/contract-tests/fixtures/nested-store/app/: .active
sdk/contract-tests/fixtures/simple-store/cluster/: .active
sdk/elixir/: .gitignore  Makefile  README.md  mix.exs
sdk/elixir/lib/: direnv_config.ex
sdk/elixir/lib/direnv_config/: cli.ex  client.ex  merge.ex  native.ex  path.ex  resolve.ex  store.ex  version.ex  watcher.ex
sdk/elixir/test/: contract_test.exs
sdk/elixir/test/direnv_config/: merge_test.exs  native_test.exs  path_test.exs  resolve_test.exs  store_test.exs  version_test.exs
sdk/php/: Makefile  README.md  composer.json  phpunit.xml
sdk/php/src/: DcClient.php  Merge.php  PathExpression.php  Resolve.php  Segment.php  Store.php  Version.php
sdk/php/src/Backend/: BackendInterface.php  CliBackend.php  NativeBackend.php
sdk/php/src/Exception/: ConfigNotFoundException.php  DcException.php  StoreNotFoundException.php
sdk/php/tests/: ContractTest.php  MergeTest.php  NativeBackendTest.php  PathExpressionTest.php  ResolveTest.php  StoreTest.php  VersionTest.php
sdk/python/: .gitignore  Makefile  README.md  pyproject.toml
sdk/python/src/direnv_config/: __init__.py  cli.py  client.py  merge.py  native.py  path.py  resolve.py  store.py  version.py
sdk/python/tests/: test_contract.py  test_merge.py  test_native.py  test_path.py  test_resolve.py  test_store.py  test_version.py
sdk/rust/: Cargo.toml  Makefile  README.md
sdk/rust/src/: client.rs  lib.rs  merge.rs  meta.rs  path.rs  resolve.rs  store.rs  version.rs
sdk/typescript/: LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: cli.ts  client.ts  index.ts  merge.ts  native.ts  path.ts  resolve.ts  store.ts  types.ts  version.ts
sdk/typescript/test/: contract.test.ts  merge.test.ts  native.test.ts  path.test.ts  resolve.test.ts  store.test.ts  version.test.ts
shell/: dc.zsh
src/: main.rs
src/cmd/: bump.rs  env.rs  get.rs  init.rs  list.rs  mod.rs  prune.rs  purge.rs  secrets.rs  set.rs  status.rs  unset.rs  yaml.rs
src/store/: layout.rs  meta.rs  mod.rs  resolve.rs  version.rs
src/yaml/: flatten.rs  merge.rs  mod.rs  path.rs
