[package]
name = "dc"
version = "0.1.0"
edition = "2021"
description = "YAML-backed configuration layer for direnv"
license = "MIT"
authors = ["Keith Brings <keith.brings@noizu.com>"]

[[bin]]
name = "dc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
