[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noizu-direnv-config"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]
description = "Python SDK for direnv-config (dc) — read YAML-backed directory configuration"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/direnv_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
