[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noizu-direnv-config"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]
description = "Python SDK for direnv-config (dc) — read and write YAML-backed directory configuration"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Keith Brings", email = "keith.brings@noizu.com" }
]
keywords = ["direnv", "config", "yaml", "environment", "configuration", "dotenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/noizu/direnv-config"
Repository = "https://github.com/noizu/direnv-config"
Issues = "https://github.com/noizu/direnv-config/issues"
Documentation = "https://github.com/noizu/direnv-config#readme"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/direnv_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
